please deploy please

--- a/public/WebHelp/EZTitles/global_delete.htm
+++ b/public/WebHelp/EZTitles/global_delete.htm
@@ -122,7 +122,7 @@
 <!--[if lt IE 7]><div style=' clear: both; height: 59px; padding:0 0 0 15px; position: relative;'><a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a></div><![endif]-->
 
 <!--ZOOMRESTART-->
-<p class="p_Normal">The Delete command deletes the text and/or the timecode of the specified block of subtitles. You can also erase entire subtitles within the selected range. The following dialog box appears:</p>
+<p class="p_Normal">The<span class="f_Emphasize"> Delete</span> command deletes the text and/or the timecode of the specified block of subtitles. You can also erase entire subtitles within the selected range. The following dialog box appears:</p>
 <div class="p_Picture"><div style="margin:0;width:316px"><img alt="&nbsp;Delete Subtitles dialog" title="&nbsp;Delete Subtitles dialog" width="316" height="424" style="width:316px;height:424px;border:none" src="delete.png"/><p style="text-align:center"><span class="f_Picture"><br/>
 Delete Subtitles dialog</span></p></div></div>
 <p class="p_Normal"><span class="f_Emphasize">Include both subtitle tracks</span> - the option will be displayed only when the project contains subtitles in <a href="secondary-subtitle-track.htm" class="topiclink">the Main and Secondary tracks</a>. Respectively, after activating it subtitles from both the<span class="f_Emphasize"> Main</span> and <span class="f_Emphasize">Secondary</span> tracks will be deleted simultaneously.</p>
