--- a/public/WebHelp/EZTitles/global_sort.htm
+++ b/public/WebHelp/EZTitles/global_sort.htm
@@ -123,7 +123,7 @@
 
 <!--ZOOMRESTART-->
 <p class="p_Normal">In certain cases, e.g. after appending timecoded subtitles from another file, you may face subtitles meant to appear at the begging of the program being placed at the end of the file which will cause problems during the playback.</p>
-<p class="p_Normal">The Sort command sorts subtitles in an ascending order on the basis of the in-cue: the subtitle with smallest in-cue value becomes first, and the one with the greatest in-cue value becomes the last.</p>
+<p class="p_Normal">The<span class="f_Emphasize"> Sort</span> command sorts subtitles in an ascending order on the basis of the in-cue: the subtitle with smallest in-cue value becomes first, and the one with the greatest in-cue value becomes the last.</p>
 <p class="p_Normal">The subtitles with empty in-cues are placed at the end.</p>
 
 <!--ZOOMSTOP-->
