--- a/public/WebHelp/EZTitles/reset.htm
+++ b/public/WebHelp/EZTitles/reset.htm
@@ -122,7 +122,7 @@
 <!--[if lt IE 7]><div style=' clear: both; height: 59px; padding:0 0 0 15px; position: relative;'><a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a></div><![endif]-->
 
 <!--ZOOMRESTART-->
-<p class="p_Normal">The Reset Subtitles command can be started from Titles/Reset Subtitles.</p>
+<p class="p_Normal">The<span class="f_Emphasize"> Reset Subtitles</span> command can be started from <span class="f_Emphasize">Titles/Reset Subtitles</span>.</p>
 <p class="p_Normal">It allows you to change the subtitles attributes like color, horizontal and vertical position, presentation effects and colors to their default values specified in the <a href="project_settings_subtitles.htm" class="topiclink">Subtitles</a> page of the Project Settings:</p>
 <div class="p_Picture"><div style="margin:0;width:411px"><img alt="&nbsp;Reset Subtitles" title="&nbsp;Reset Subtitles" width="411" height="234" style="width:411px;height:234px;border:none" src="reset.png"/><p style="text-align:center"><span class="f_Picture"><br/>
 Reset Subtitles</span></p></div></div>
