--- a/public/WebHelp/EZTitles/global_renumber.htm
+++ b/public/WebHelp/EZTitles/global_renumber.htm
@@ -128,9 +128,9 @@ Renumber Subtitles</span></p></div></div>
 <p class="p_Normal">The Renumber command provides only a few options:</p>
 <div style="text-align: left; text-indent: 0; padding: 0 0 0 0; margin: 0 5px 11px 38px;"><table style="width:80%; border:none; border-spacing:0; border-collapse:collapse;">
 <tr>
-<td style="vertical-align:top; width:201px; padding:0; border:solid thin #000000;"><p class="p_IndentedHilite"><span class="f_IndentedHilite">All Subtitles</span></p>
+<td style="vertical-align:top; width:201px; height:29px; padding:0; border:solid thin #000000;"><p class="p_IndentedHilite"><span class="f_IndentedHilite">All Subtitles</span></p>
 </td>
-<td style="vertical-align:top; width:705px; padding:0; border:solid thin #000000;"><p class="p_Indented"><span class="f_Indented">Renumbers all subtitles present in the file.</span></p>
+<td style="vertical-align:top; width:705px; height:29px; padding:0; border:solid thin #000000;"><p class="p_Indented"><span class="f_Indented">Renumbers all subtitles present in the file.</span></p>
 </td>
 </tr>
 <tr>
