--- a/public/WebHelp/EZTitles/sort-by-number.htm
+++ b/public/WebHelp/EZTitles/sort-by-number.htm
@@ -122,7 +122,7 @@
 <!--[if lt IE 7]><div style=' clear: both; height: 59px; padding:0 0 0 15px; position: relative;'><a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a></div><![endif]-->
 
 <!--ZOOMRESTART-->
-<p class="p_Normal">The Sort by Number option can be used in the cases when the consistent subtitle numbering is more relevant and important than the coherence of the subtitles In and Out times in the list. This is mostly the case when a set of edits to the file have to be compared to or even replicated to a second translation and the easiest way to do this is by checking the numbering. </p>
+<p class="p_Normal">The <span class="f_Emphasize">Sort by Number</span> option can be used in the cases when the consistent subtitle numbering is more relevant and important than the coherence of the subtitles In and Out times in the list. This is mostly the case when a set of edits to the file have to be compared to or even replicated to a second translation and the easiest way to do this is by checking the numbering. </p>
 <p class="p_Normal">When using the Sort by Number option, the preview list will be sorted out based on the current numbering in the file - subtitles with smaller numbers will be sorted before those with the bigger numbers, without being renumbered and irrelevant of their In time. This also means that some subtitles might get indicated as &quot;Inconsistent&quot;. </p>
 
 <!--ZOOMSTOP-->
